--- a/BNRHomepwner/BNRHomepwner/BNRDetailViewController.xib
+++ b/BNRHomepwner/BNRHomepwner/BNRDetailViewController.xib
@@ -9,13 +9,13 @@
                 <outlet property="dateLabel" destination="tJp-vK-fNT" id="NN3-Kb-PB6"/>
                 <outlet property="imageView" destination="Zog-ql-hih" id="u5m-tA-S6z"/>
                 <outlet property="nameField" destination="JM4-0e-pnd" id="v6m-wi-7Wy"/>
-                <outlet property="seriallNumberField" destination="9td-HL-g7Q" id="q9G-bi-SyD"/>
+                <outlet property="serialField" destination="9td-HL-g7Q" id="jDj-aS-0qC"/>
                 <outlet property="valueField" destination="2QP-tU-jWl" id="om4-91-sTM"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
+        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT" customClass="UIControl">
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -82,6 +82,9 @@
                 </toolbar>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <connections>
+                <action selector="backgroundTapped:" destination="-1" eventType="touchUpInside" id="rpD-js-Ado"/>
+            </connections>
             <point key="canvasLocation" x="280" y="555"/>
         </view>
     </objects>
