--- a/Control Fun/Control Fun/Base.lproj/Main.storyboard
+++ b/Control Fun/Control Fun/Base.lproj/Main.storyboard
@@ -28,9 +28,13 @@
                                 </connections>
                             </textField>
                             <textField opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Type in a number" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="01Z-ax-5Bw">
-                                <rect key="frame" x="96" y="146" width="208" height="30"/>
+                                <rect key="frame" x="95" y="146" width="208.5" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" keyboardType="numberPad" returnKeyType="done"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                                <connections>
+                                    <action selector="editingDidBegin:" destination="vXZ-lx-hvc" eventType="editingDidBegin" id="uOL-oB-sgq"/>
+                                    <action selector="editingDidEnd:" destination="vXZ-lx-hvc" eventType="editingDidEnd" id="yzJ-M3-Ags"/>
+                                </connections>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Number:" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3ed-Eh-GMz">
                                 <rect key="frame" x="21" y="150" width="67" height="21"/>
