--- a/Control Fun/Control Fun/Base.lproj/Main.storyboard
+++ b/Control Fun/Control Fun/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
@@ -28,7 +28,7 @@
                                 </connections>
                             </textField>
                             <textField opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Type in a number" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="01Z-ax-5Bw">
-                                <rect key="frame" x="95" y="146" width="208.5" height="30"/>
+                                <rect key="frame" x="96" y="146" width="208" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                 <connections>
@@ -37,7 +37,7 @@
                                 </connections>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Number:" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3ed-Eh-GMz">
-                                <rect key="frame" x="21" y="150" width="67" height="21"/>
+                                <rect key="frame" x="21" y="150" width="66.5" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="sPO-op-PNE"/>
                                 </constraints>
@@ -55,19 +55,39 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="50" minValue="1" maxValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="Z5G-Rq-3JK">
+                                <rect key="frame" x="51" y="184" width="255" height="31"/>
+                                <connections>
+                                    <action selector="sliderChanged:" destination="vXZ-lx-hvc" eventType="valueChanged" id="oiw-Hm-gtU"/>
+                                </connections>
+                            </slider>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0eS-ha-xwq">
+                                <rect key="frame" x="16" y="189" width="29" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="29" id="Ief-3c-YfU"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="IME-6U-vvU" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="top" constant="20" id="1BN-L5-hwT"/>
                             <constraint firstItem="3ed-Eh-GMz" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="21" id="AjH-5O-QEa"/>
+                            <constraint firstItem="0eS-ha-xwq" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="16" id="C96-eb-vcc"/>
                             <constraint firstItem="yzV-Zt-KhF" firstAttribute="leading" secondItem="jQN-g0-iGO" secondAttribute="trailing" constant="8" id="Hzg-Hn-18P"/>
                             <constraint firstItem="yzV-Zt-KhF" firstAttribute="top" secondItem="IME-6U-vvU" secondAttribute="bottom" constant="8" id="Mb0-9C-far"/>
+                            <constraint firstItem="Z5G-Rq-3JK" firstAttribute="leading" secondItem="0eS-ha-xwq" secondAttribute="trailing" constant="8" id="Oo1-4x-NiM"/>
+                            <constraint firstItem="Z5G-Rq-3JK" firstAttribute="top" secondItem="01Z-ax-5Bw" secondAttribute="bottom" constant="8" id="URy-uY-PMZ"/>
                             <constraint firstItem="01Z-ax-5Bw" firstAttribute="leading" secondItem="3ed-Eh-GMz" secondAttribute="trailing" constant="8" id="VVg-Q0-LZA"/>
                             <constraint firstItem="jQN-g0-iGO" firstAttribute="top" secondItem="IME-6U-vvU" secondAttribute="bottom" constant="12" id="WMd-Sv-MkJ"/>
                             <constraint firstItem="01Z-ax-5Bw" firstAttribute="top" secondItem="yzV-Zt-KhF" secondAttribute="bottom" constant="8" id="XcB-3Q-XRv"/>
+                            <constraint firstAttribute="trailing" secondItem="Z5G-Rq-3JK" secondAttribute="trailing" constant="16" id="ika-dn-eFW"/>
                             <constraint firstAttribute="trailing" secondItem="01Z-ax-5Bw" secondAttribute="trailing" constant="16" id="q6D-ta-2UP"/>
                             <constraint firstItem="3ed-Eh-GMz" firstAttribute="top" secondItem="jQN-g0-iGO" secondAttribute="bottom" constant="17" id="tYI-AQ-afW"/>
                             <constraint firstItem="jQN-g0-iGO" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="21" id="unP-N0-0xR"/>
+                            <constraint firstItem="0eS-ha-xwq" firstAttribute="top" secondItem="3ed-Eh-GMz" secondAttribute="bottom" constant="18" id="vIV-dE-H04"/>
                             <constraint firstAttribute="centerX" secondItem="IME-6U-vvU" secondAttribute="centerX" id="wSp-yP-29m"/>
                             <constraint firstAttribute="trailing" secondItem="yzV-Zt-KhF" secondAttribute="trailing" constant="16" id="yaN-1J-AG2"/>
                         </constraints>
@@ -78,6 +98,7 @@
                     <connections>
                         <outlet property="nameField" destination="yzV-Zt-KhF" id="EQU-xp-bIE"/>
                         <outlet property="numberField" destination="01Z-ax-5Bw" id="VDD-cU-ib9"/>
+                        <outlet property="sliderLabel" destination="0eS-ha-xwq" id="L1B-rg-c98"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
